--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,7 +1,10 @@
 .footer {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
   margin: 0 15.625%;
 }
-
+/* stylelint-disable aditayvm/at-rule-no-children */
 @media screen and (max-width: 1024px) {
   .footer {
     margin: 0 5.9375%;
