--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -13,6 +13,7 @@
 
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__input-item/form__input-item.css);
+@import url(../blocks/form/_type/form__input-item_type_color.css);
 @import url(../blocks/form/__label/form__label.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__button/form__button.css);
@@ -22,5 +23,13 @@
 @import url(../blocks/summary-data/__consistently/summary-data__consistently.css);
 @import url(../blocks/summary-data/__button-reset/summary-data__button-reset.css);
 
+@import url(../blocks/previous-result/previous-result.css);
+@import url(../blocks/previous-result/__item/previous-result__item.css);
+
+@import url(../blocks/num/num-item.css);
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__love/footer__love.css);
+@import url(../blocks/footer/__love-heart/footer__love-heart.css);
+@import url(../blocks/footer/__way-of-love/footer__way-of-love.css);
